--- a/.gitignore
+++ b/.gitignore
@@ -12,6 +12,11 @@ dist
 dist-ssr
 *.local
 
+# Vercel
+.vercel
+.vercelignore
+vercel.json
+
 # Editor directories and files
 .vscode/*
 !.vscode/extensions.json
