--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "build": "tsc -b && vite build",
     "lint": "eslint .",
     "preview": "vite preview",
-    "check": "tsc -b --noEmit"
+    "check": "tsc -b --noEmit",
+    "deploy:gitee": "npm run build && node deploy-gitee.js"
   },
   "dependencies": {
     "clsx": "^2.1.1",
