--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -25,6 +25,8 @@ jobs:
       
     - name: Build
       run: npm run build
+      env:
+        DEPLOY_TARGET: github
       
     - name: Setup Pages
       uses: actions/configure-pages@v4
