--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -21,6 +21,7 @@
     "noUnusedParameters": false,
     "noFallthroughCasesInSwitch": false,
     "noUncheckedSideEffectImports": false,
+    "forceConsistentCasingInFileNames": false,
 
     /* Paths */
     "baseUrl": "./",
